Updated Photo Source

--- a/HW18_Portfolio/portfolio.HTML
+++ b/HW18_Portfolio/portfolio.HTML
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
   <head>
-      <link rel="stylesheet" href="style.css" type="text/css">
+      <link rel="stylesheet" href="portstyle.css" type="text/css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/cssfamily=Poppins">
       <link rel="stylesheet" href="https://use.typekit.net/rtx8nwv.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,14 +16,14 @@
           <div id="content-wrap">
             <div class="container">
             <h1 class="logo">
-              <img src="C:\Users\Cassandra\Desktop\Activities\images/logo.png" alt="CM Logo" class="logo">
+              <img src="C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\logo.png" alt="CM Logo" class="logo">
             </h1>
               <nav>
                 <div class= "backgroundbox">
                 <ul>
                   <li><a href="#About">About</a></li>
-                  <li><a href="#Portfolio">Portfolio</a></li>
-                  <li><a href="#Skills">Skills</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="skills.html">Skills</a></li>
                   <li><a href="#Contact">Contact</a></li>
                 </ul>
                 <h2> Portfolio </h2>
@@ -31,22 +31,22 @@
                   <div class="container2">
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\Activities\images/Screenshot (287).png'>
+                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\Screenshot (287).png'>
                       </div>
                     </div>
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\Activities\images/Screenshot (281).png'>
+                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\Screenshot (281).png'>
                       </div>
                     </div>
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\Activities\images/Screenshot (285).png'>
+                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\Screenshot (285).png'>
                       </div>
                     </div>
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\Activities\images/TrailAngels.png'>
+                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\TrailAngels.png'>
                       </div>
                     </div>
                 </nav>
@@ -73,8 +73,8 @@
         <div class="footer-right">
             <p class="footer-links">
               <a href="#">About</a>
-              <a href="#">Portfolio</a>
-              <a href="#">Skills</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="skills.html">Skills</a>
             </p>
           </div> 
         </div> 
