--- a/HW18_Portfolio/index.html
+++ b/HW18_Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
   <head>
-      <link rel="stylesheet" href="portstyle.css" type="text/css">
+      <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/cssfamily=Poppins">
       <link rel="stylesheet" href="https://use.typekit.net/rtx8nwv.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,8 +22,8 @@
                 <div class= "backgroundbox">
                 <ul>
                   <li><a href="#About">About</a></li>
-                  <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="skills.html">Skills</a></li>
+                  <li><a href="#Portfolio">Portfolio</a></li>
+                  <li><a href="index.html">Skills</a></li>
                   <li><a href="#Contact">Contact</a></li>
                 </ul>
                 <h2> Portfolio </h2>
@@ -73,8 +73,8 @@
         <div class="footer-right">
             <p class="footer-links">
               <a href="#">About</a>
-              <a href="portfolio.html">Portfolio</a>
-              <a href="skills.html">Skills</a>
+              <a href="#">Portfolio</a>
+              <a href="index.html">Skills</a>
             </p>
           </div> 
         </div> 
