--- a/HW18_Skills/index.html
+++ b/HW18_Skills/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
   <head>
-      <link rel="stylesheet" href="skillsstyle.css" type="text/css">
+      <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/cssfamily=Poppins">
       <link rel="stylesheet" href="https://use.typekit.net/rtx8nwv.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,7 +23,7 @@
                 <ul>
                   <li><a href="#About">About</a></li>
                   <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="skills.html">Skills</a></li>
+                  <li><a href="#Skills">Skills</a></li>
                   <li><a href="#Contact">Contact</a></li>
                 </ul>
                 <h2> Skills </h2>
@@ -57,7 +57,7 @@
             <p class="footer-links">
               <a href="#">About</a>
               <a href="portfolio.html">Portfolio</a>
-              <a href="skills.html">Skills</a>
+              <a href="#Skills">Skills</a>
             </p>
           </div> 
         </div> 
