--- a/HW18_Portfolio/index.html
+++ b/HW18_Portfolio/index.html
@@ -16,7 +16,7 @@
           <div id="content-wrap">
             <div class="container">
             <h1 class="logo">
-              <img src="C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\logo.png" alt="CM Logo" class="logo">
+              <img src="images/logo.png" alt="CM Logo" class="logo">
             </h1>
               <nav>
                 <div class= "backgroundbox">
@@ -28,31 +28,33 @@
                 </ul>
                 <h2> Portfolio </h2>
                 </div>
+                </nav>
+              </header>
+                <section>
                   <div class="container2">
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\Screenshot (287).png'>
+                        <img src= 'images/Screenshot (287).png'>
                       </div>
                     </div>
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\Screenshot (281).png'>
+                        <img src= 'images/Screenshot (281).png'>
                       </div>
                     </div>
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\Screenshot (285).png'>
+                        <img src= 'images/Screenshot (285).png'>
                       </div>
                     </div>
                     <div class="card">
                       <div class="imgbox">
-                        <img src= 'C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\TrailAngels.png'>
+                        <img src= 'images/TrailAngels.png'>
                       </div>
                     </div>
-                </nav>
+                  </section>
             </div>
           </div>
-      </header>
       
       <footer class="footer-distributed">
         <div class="footer-left">
