--- a/HW18_Skills/index.html
+++ b/HW18_Skills/index.html
@@ -16,7 +16,7 @@
           <div id="content-wrap">
             <div class="container">
             <h1 class="logo">
-              <img src="C:\Users\Cassandra\Desktop\00_MyCode\UX_UI_HW_18\HW18_Portfolio\images\logo.png" alt="CM Logo" class="logo">
+              <img src="images/logo.png" alt="CM Logo" class="logo">
             </h1>
               <nav>
                 <div class= "backgroundbox">
