--- a/HW18_Portfolio/HW18_Skills/index.html
+++ b/HW18_Portfolio/HW18_Skills/index.html
@@ -22,7 +22,7 @@
                 <div class= "backgroundbox">
                 <ul>
                   <li><a href="#About">About</a></li>
-                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="../index.html">Portfolio</a></li>
                   <li><a href="#Skills">Skills</a></li>
                   <li><a href="#Contact">Contact</a></li>
                 </ul>
@@ -56,7 +56,7 @@
         <div class="footer-right">
             <p class="footer-links">
               <a href="#">About</a>
-              <a href="portfolio.html">Portfolio</a>
+              <a href="../index.html">Portfolio</a>
               <a href="#Skills">Skills</a>
             </p>
           </div> 
