--- a/HW18_Portfolio/index.html
+++ b/HW18_Portfolio/index.html
@@ -23,7 +23,7 @@
                 <ul>
                   <li><a href="#About">About</a></li>
                   <li><a href="#Portfolio">Portfolio</a></li>
-                  <li><a href="index.html">Skills</a></li>
+                  <li><a href="./HW18_Skills/index.html">Skills</a></li>
                   <li><a href="#Contact">Contact</a></li>
                 </ul>
                 <h2> Portfolio </h2>
@@ -76,7 +76,7 @@
             <p class="footer-links">
               <a href="#">About</a>
               <a href="#">Portfolio</a>
-              <a href="index.html">Skills</a>
+              <a href="./HW18_Skills/index.html">Skills</a>
             </p>
           </div> 
         </div> 
